@@ -8,6 +8,7 @@ DFHack Future
           stockpile settings to a file. They can be used to migrate stockpile
           settings between worlds and saves.
     New scripts:
+        - remove-stress [all]: set selected or all units unit to -1,000,000 stress
     Misc improvements:
         - cmd-prompt can now access selected items, units, and buildings
 
